--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="header">
-      <ul class="left-links">
+    <div class="header flex-container">
+      <ul class="left-links flex-container">
         <li><a href="#">About</a></li>
         <li><a href="#">Store</a></li>
       </ul>
-      <ul class="right-links">
+      <ul class="right-links flex-container">
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
@@ -23,17 +23,17 @@
       <div class="input">
         <input type="text">
       </div>
-      <div class="buttons">
+      <div class="buttons flex-container">
         <button>Do the thing!</button>
         <button>Do the other thing!</button>
       </div>
     </div>
-    <div class="footer">
-      <ul class="left-links">
+    <div class="footer flex-container">
+      <ul class="left-links flex-container">
         <li><a href="#">Advertising</a></li>
         <li><a href="#">Business</a></li>
       </ul>
-      <ul class="right-links">
+      <ul class="right-links flex-container">
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
       </ul>
